fix bug #33382 (array_reverse() fails after *sort()) no need to MFH - the bug existed only in HEAD